# nerva

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
dist-tsconfig-node/: tsconfig.node.tsbuildinfo
docs/: ARCHITECTURE.md  CONTRIBUTING.md  LAUNCH.md  MOBILE.md  RELEASE.md  ROADMAP.md  STORY.md
flatpak/: README.md  ai.bytical.nerva.desktop  ai.bytical.nerva.metainfo.xml  ai.bytical.nerva.yaml
packaging/linux/: install-daemon.sh  nerva.desktop
packaging/msix/: AppxManifest.xml  README.md
packaging/winget/: Bytical.Nerva.locale.en-US.yaml
scripts/: dev.sh  gen-signing-cert.sh  gen-updater-keys.sh
snap/: snapcraft.yaml
src/: App.tsx  main.tsx  updater.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/diag/: mod.rs
src-tauri/src/focus/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/habits/: mod.rs
src-tauri/src/intelligence/: mod.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/notes/: mod.rs
src-tauri/src/store/: mod.rs
src-tauri/src/tasks/: mod.rs
src-tauri/src/timers/: mod.rs
src-tauri/src/workspaces/: mod.rs
src-tauri/tests/: projections.rs
src/components/: AskNerva.tsx  CommandBar.tsx  CommandPalette.tsx  ErrorBoundary.tsx  (+16 more)
web/: package.json  vercel.json
(+22 files in other folders)
