[package]
name = "nerva"
version = "0.1.1"
description = "Nerva — persistent focus workspace"
authors = ["Nerva contributors"]
edition = "2021"
# Bumped from 1.77 to 1.81: `std::panic::PanicHookInfo` (used by the crash
# handler in src/diag/mod.rs) was renamed/stabilized in 1.81. The 1.77
# alias `PanicInfo` is deprecated and clippy flags it.
rust-version = "1.81"

[lib]
name = "nerva_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-single-instance = "2.0"
tauri-plugin-updater = "2.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
dirs = "5"
once_cell = "1"
async-trait = "0.1"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"

[features]
default = []
